tests/NormalTests/paczka1/small_fuzzy/17857592.err
Error in line 1: oKY67pqI A24 39,3
Error in line 2: oKY67pqI A282 49,9
Error in line 5: oKY67pqI S699 21,3
Error in line 10: n1yPP5ZYt0 S578 43,12
Error in line 11: wTthsBECd A282 57,0
Error in line 13: nMc A282 12,5
